trunk/Archive2/21/cb613cb5610f11/output
main.cpp: In function 'int main()':
main.cpp:15:13: error: unable to find string literal operator 'operator""mathAdd'
     cout << "Running function mathAdd(), "mathAdd(8,7) << endl;  
             ^
