trunk/Archive2/21/cb613cb5610f11/main.cpp
#include <iostream>

using namespace std;

template<class T>
T mathAdd(T x, T y)
{
    T temp;
    temp = x + y;
    return temp;
}

int main()
{
    cout << "Running function mathAdd(), "mathAdd(8,7) << endl;  
	return 0;
}